feature：添加 polygons 组件。

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@types/lodash.clonedeep": "^4.5.6",
     "core-js": "^2.6.5",
+    "lodash.clonedeep": "^4.5.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
