--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --target lib --name FastAmap --dest lib packages/index.ts",
+    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint --fix",
     "test": "vue-cli-service test:unit"
   },
