--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "vue-fast-amap",
   "version": "0.1.0",
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup -c build/rollup.config.js",
+    "build:mini": "rollup -c build/rollup.config.mini.js",
+    "package": "yarn build && yarn build:mini",
     "dev": "webpack-dev-server --inline --progress --config webpack.config.js",
     "lint": "eslint --ext .js,.vue src",
     "format": "prettier --config ./.prettierrc.yaml --write '**/*.{js,bue,css,scss}'",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.5.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^1.0.1",
@@ -55,9 +58,10 @@
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "rollup": "^1.16.6",
+    "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-terser": "^5.1.0",
     "rollup-plugin-vue": "^4.7.2",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
