--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   },
   "homepage": "https://github.com/txs1992/fast-amap#readme",
   "peerDependencies": {
-    "lodash.clonedeep": "^4.5.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
@@ -53,13 +52,13 @@
     "eslint-plugin-vue": "^5.2.2",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
-    "lodash.clonedeep": "^4.5.0",
     "node-sass": "^4.11.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "rollup": "^1.16.6",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-terser": "^5.1.0",
     "rollup-plugin-vue": "^5.0.1",
@@ -74,5 +73,8 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.6.0",
     "webpack-dev-server": "^3.2.1"
+  },
+  "dependencies": {
+    "lodash.clonedeep": "^4.5.0"
   }
 }
