--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint --ext .js,.vue src",
     "test": "yarn lint",
     "format": "prettier --config ./.prettierrc.yaml --write '**/*.{js,bue,css,scss}'",
-    "precommit": "pretty-quick --staged"
+    "precommit": "pretty-quick --staged",
+    "deploy": "npm run docs:build && gh-pages -d dist"
   },
   "description": "## Project setup ``` yarn install ```",
   "main": "lib/fast-amap.mini.js",
@@ -51,6 +52,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.2.2",
     "express": "^4.16.4",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "prettier": "^1.16.4",
