feature：格式化代码。

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "rollup -c build/rollup.config.js",
     "build:mini": "rollup -c build/rollup.config.mini.js",
     "package": "yarn build && yarn build:mini",
-    "dev": "webpack-dev-server --inline --progress --config webpack.config.js",
-    "lint": "eslint --ext .js,.vue src",
+    "dev": "yarn lint && yarn format && webpack-dev-server --inline --progress --config webpack.config.js",
+    "lint": "eslint --ext .js,.vue packages",
     "test": "yarn lint",
     "format": "prettier --config ./.prettierrc.yaml --write '**/*.{js,vue,css,scss}'",
     "precommit": "pretty-quick --staged",
