feature：添加 jest 测试框架

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,21 @@
+// {
+//   "presets": [
+//     [
+//       "@babel/preset-env",
+//       {
+//         "modules": false
+//       }
+//     ]
+//   ]
+// }
 {
   "presets": [
     [
       "@babel/preset-env",
       {
-        "modules": false
+        "targets": {
+          "node": "current"
+        }
       }
     ]
   ]
