--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: node_js
 node_js:
-  - '8'
+  - 5.0
+  - 6.0
+  - 7.0
+  - 8.0
+# script: node_modules/karma/bin/karma start ./karma.conf.js --singleRun
+# before_install:
+#   - export CHROME_BIN=chromium-browser
+#   - export DISPLAY=:99.0
+#   - sh -e /etc/init.d/xvfb start
 dist: trusty # needs Ubuntu Trusty
 # Note: if you switch to sudo: false, you'll need to launch Chrome with --no-sandbox.
 # See https://github.com/travis-ci/travis-ci/issues/8836
