--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,9 @@
+sudo: false
 language: node_js
-node_js:
-  - 11.0
-script: node_modules/karma/bin/karma start ./karma.conf.js --singleRun
+node_js: 10
+addons:
+  chrome: stable
 before_install:
-  - export CHROME_BIN=chromium-browser
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-# dist: trusty # needs Ubuntu Trusty
-# # Note: if you switch to sudo: false, you'll need to launch Chrome with --no-sandbox.
-# # See https://github.com/travis-ci/travis-ci/issues/8836
-# sudo: required
-# addons:
-#   chrome: stable # have Travis install Chrome stable.
-# cache:
-#   yarn: true
-#   directories:
-#     - node_modules
-# install:
-#   - yarn
-# script:
-#   - yarn test
+  - export TRAVIS_COMMIT_MSG="[deploy] $(git log --format='%h - %B' --no-merges -n 1)"
+  - export TRAVIS_COMMIT_USER="$(git log --no-merges -n 1 --format=%an)"
+  - export TRAVIS_COMMIT_EMAIL="$(git log --no-merges -n 1 --format=%ae)"
