--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "package": "yarn build && yarn build:mini",
     "dev": "yarn lint && yarn format && webpack-dev-server --inline --progress --config webpack.config.js",
     "lint": "eslint --ext .js,.vue packages",
-    "test": "karma start --single-run --browsers MyHeadlessChrome karma.conf.js",
+    "test": "karma start --single-run karma.conf.js",
     "format": "prettier --config ./.prettierrc.yaml --write '**/*.{js,vue,css,scss}'",
     "precommit": "pretty-quick --staged",
     "deploy": "npm run docs:build && gh-pages -d dist"
