fix：错误的测试用例。

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "karma-webpack": "^4.0.2",
     "mocha": "^6.2.0",
     "node-sass": "^4.11.0",
+    "noshjs": "^0.4.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "rollup": "^1.16.6",
@@ -84,6 +85,5 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.6.0",
     "webpack-dev-server": "^3.2.1"
-  },
-  "dependencies": {}
+  }
 }
